<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hello_pub_py3</name>
  <version>0.0.1</version>
  <description>"Hello World" in ROS2 (Publisher only!!!)</description>
  <maintainer email="ken.saito.0813@gmail.com">Kensuke Saito</maintainer>
  <license>MIT License</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
	  <build_type>ament_python</build_type>
	  <exec_type>rclpy</exec_type>
	  <exec_type>std_msgs</exec_type>
  </export>
</package>
